fix(References): Fix irregular spacing for Author references

--- a/src/extensions/cite-apa/styles.css
+++ b/src/extensions/cite-apa/styles.css
@@ -5,7 +5,6 @@
   }
 
   :--reference {
-
     :--authors {
       display: inline;
       padding-left: 0;
@@ -18,6 +17,8 @@
           order: 1;
 
           :--familyName {
+            white-space: nowrap;
+
             &::after {
               content: '\00a0';
             }
@@ -36,6 +37,8 @@
           order: 2;
 
           :--givenName {
+            white-space: nowrap;
+
             &::after {
               content: '.\00a0';
             }
